--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint-config-prettier": "^6.3.0",
 		"eslint-plugin-prettier": "^3.0.0",
 		"eslint-plugin-react": "^7.11.1",
+		"file-loader": "^6.0.0",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.2.0",
 		"husky": "^4.2.3",
