--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"build": "webpack --mode=production"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.0.0-beta.41",
 		"@hot-loader/react-dom": "^16.8.6",
+		"graphql": "^14.6.0",
 		"prop-types": "^15.7.2",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
