--- a/package.json
+++ b/package.json
@@ -2,57 +2,27 @@
 	"name": "shit",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "dist/index.html",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"scripts": {
-		"start": "webpack-dev-server --mode=development",
-		"build": "webpack --mode=production"
+		"start": "parcel serve src/index.html --cache-dir dist/cache",
+		"build": "parcel build src/index.html --cache-dir dist/cache "
 	},
 	"dependencies": {
 		"@apollo/client": "^3.0.0-beta.41",
-		"@hot-loader/react-dom": "^16.8.6",
 		"graphql": "^14.6.0",
-		"prop-types": "^15.7.2",
-		"react": "^16.9.0",
-		"react-dom": "^16.9.0",
-		"styled-components": "5",
-		"styled-icons": "^10.2.1"
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"styled-components": "5"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.1.0",
-		"@babel/core": "^7.4.0",
-		"@babel/preset-env": "^7.4.2",
-		"@babel/preset-react": "^7.0.0",
-		"@babel/preset-stage-2": "^7.0.0",
-		"babel-loader": "^8.0.5",
-		"babel-plugin-styled-components": "^1.8.0",
 		"eslint": "^6.4.0",
 		"eslint-config-prettier": "^6.3.0",
 		"eslint-plugin-prettier": "^3.0.0",
 		"eslint-plugin-react": "^7.11.1",
-		"file-loader": "^6.0.0",
-		"html-loader": "^0.5.5",
-		"html-webpack-plugin": "^3.2.0",
-		"husky": "^4.2.3",
-		"lint-staged": "^10.0.8",
-		"prettier": "^1.18.2",
-		"react-hot-loader": "^4.8.0",
-		"webpack": "^4.29.6",
-		"webpack-cli": "^3.3.0",
-		"webpack-dev-server": "^3.2.1"
-	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "lint-staged"
-		}
-	},
-	"lint-staged": {
-		"*.js": [
-			"eslint --fix",
-			"prettier --write",
-			"git add"
-		]
+		"parcel": "^2.0.0-alpha.3.2",
+		"prettier": "^1.18.2"
 	}
 }
